--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "react-scripts": "0.4.3"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
